# RainbowOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bootloader/: CMakeLists.txt  stage0.S  stage0.ld  stage1.S  stage1.ld  stage1main.cpp
build-scripts/: copy-diskimage.sh  mountdirs.sh  setup-diskimage.sh
config/: Findbochs.cmake  Findqemu.cmake  bochsrc  diskimage.sfdisk  gdbinit  toolchain.cmake
docs/: CMakeLists.txt  Doxyfile.in  README.md  basic_info.md
docs/bootloader/: design.md
docs/misc/: build_bochs.md
include/: debug.h  sources.cmake
include/bootloader/: commonDefines.h
include/devices/: BIOSVideoIO.hpp
include/devices/cpu/: apic.hpp  cpuid.hpp  msr.hpp
include/earlyLib/: diskRead16.hpp  memory.hpp  memoryDetection16.hpp  realMode.hpp
include/fs/: fat32.hpp  mbr.hpp
include/kernel/: interrupts.hpp
include/kernelInternal/: acpi.hpp  acpiKernel.hpp  gdt.h
include/kernelInternal/devices/cpu/: apic.hpp  cpu.hpp  pic.hpp
include/kernelInternal/system/: interrupts.hpp
include/klib/: asmIO.hpp  cpuio.hpp  cstdlib.hpp  io.hpp  stdlib.h  string.h  tracemax.hpp
include/sys/: elf.h  multiboot.h
kernel/: CMakeLists.txt  acpi.cpp  acpiKernel.hpp  boot.S  kernel.ld  kmain.cpp
kernel/devices/: acpiKernel.cpp
kernel/devices/cpu/: apic.cpp  cpuid.cpp  msr.cpp
kernel/system/: acpi.cpp  interruptAutoGen.inc  interrupts.cpp
lib/: CMakeLists.txt
lib/devices/: apic.cpp  checkCPUID.S  cpuid.cpp  msr.cpp
lib/earlyLib/: asmCall_int12.S  asmCall_int13.S  asmCall_int15.S  diskRead16.cpp  memory.cpp  memoryDetection16.cpp  realModeCall.S
lib/fs/: fat32.cpp
lib/io/: BIOSVideoIO.cpp
lib/kernel/: interruptHandler.S  interrupts.cpp
lib/stdlibC/: abort.c  cstdlib.cpp  string.c
